@@ -567,6 +567,17 @@
     </tr>
     <tr>
       <th align="left">
+        <a href="api/pyplot_api.html#matplotlib.pyplot.imsave">imsave</a>
+
+      </th>
+
+      <td align="left">
+        save array as an image file
+      </td>
+
+    </tr>
+    <tr>
+      <th align="left">
         <a href="api/pyplot_api.html#matplotlib.pyplot.imshow">imshow</a>
 
       </th>
